--- a/package.json
+++ b/package.json
@@ -1,58 +1,33 @@
 {
-  "name": "zebecsdk",
-  "version": "1.0.0",
-  "description": "Zebec Protocol SDK V2",
-  "types": "dist/index.d.ts",
-  "keywords": [
-    "zebec",
-    "zebec protocol",
-    "money streaming",
-    "stream",
-    "zbc",
-    "multisig",
-    "treasury"
-  ],
-  "bugs": {
-    "url": "https://github.com/Zebec-protocol/zebec-sdk-v2"
-  },
-  "main": "dist/index.js",
-  "files": [
-    "/dist/*.*",
-    "/src"
-  ],
-  "scripts": {
-    "build": "npm run clean; tsc",
-    "clean": "rm -rf ./dist",
-    "publish": "npm publish --access public",
-    "start": "ts-node src/index.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Zebec-protocol/zebec-sdk-v2"
-  },
-  "author": "Zebec Protocol | Ashish",
-  "license": "ISC",
-  "homepage": "https://github.com/Zebec-protocol/zebec-sdk-v2#readme",
-  "dependencies": {
-    "@solana/spl-token": "^0.2.0",
-    "@solana/web3.js": "^1.36.0",
-    "borsh": "^0.7.0",
-    "buffer": "^6.0.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
-    "@babel/register": "^7.17.7",
-    "@types/node": "^17.0.22",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "eslint": "^8.11.0",
-    "esm": "^3.2.25",
-    "prettier": "^2.6.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
-  }
+    "name": "@zebec-labs/zebec-protocol",
+    "version": "1.1.2",
+    "description": "Typescript SDKs for the Zebec Protocol",
+    "private": false,
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Zebec-protocol/zebec-sdk-v2.git"
+    },
+    "keywords": [
+        "zebec-protocol",
+        "money-streaming",
+        "token streaming",
+        "zebec"
+    ],
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Zebec-protocol/zebec-sdk-v2/issues"
+    },
+    "homepage": "https://github.com/Zebec-protocol/zebec-sdk-v2/#readme",
+    "files": [],
+    "scripts": {
+        "build": "tsc -b ./packages/**/tsconfig.json",
+        "clean": "rm -R ./packages/**/dist",
+        "clean:win": "rmdir /s packages/**/dist",
+        "publish": "npm publish --access public",
+        "install:stream": "cd ../../../ && npm i -S @zebec-labs/stream",
+        "install": "run-p install:*"
+    },
+    "dependencies": {
+        "@zebec-labs/zebec-protocol": "^1.1.2"
+    }
 }
