--- a/packages/stream/package.json
+++ b/packages/stream/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@zebec-labs/stream",
-  "version": "1.0.3",
+  "version": "1.0.0",
   "description": "Zebec Protocol SDK V2",
-  "types": "dist/index.d.ts",
+  "types": "src/index.d.ts",
   "keywords": [
     "zebec",
     "zebec protocol",
