--- a/packages/stream/package.json
+++ b/packages/stream/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zebec-labs/stream",
-  "version": "1.0.0",
+  "name": "@zebec-protocol/stream",
+  "version": "1.0.2",
   "description": "Zebec Protocol SDK V2",
   "types": "src/index.d.ts",
   "keywords": [
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Zebec-protocol/zebec-sdk-v2"
+    "url": "git+https://github.com/Zebec-protocol/zebec-sdk-v2.git"
   },
   "author": "Zebec Protocol | Ashish",
   "license": "ISC",
