--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-    "name": "@zebec-labs/zebec-protocol",
-    "version": "1.0.0",
-    "description": "Typescript SDKs for the Zebec Protocol",
-    "private": false,
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Zebec-protocol/zebec-sdk-v2.git"
-    },
-    "keywords": [
-        "zebec-protocol",
-        "money-streaming",
-        "token streaming",
-        "zebec"
-    ],
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Zebec-protocol/zebec-sdk-v2/issues"
-    },
-    "homepage": "https://github.com/Zebec-protocol/zebec-sdk-v2/#readme",
-    "files": [],
-    "scripts": {
-        "build": "tsc -b ./packages/**/tsconfig.json",
-        "clean": "rm -R ./packages/**/dist",
-        "clean:win": "rmdir /s packages/**/dist",
-        "publish": "npm publish --access public",
-        "install:stream": "cd ../../../ && npm i -S @zebec-labs/stream",
-        "install": "run-p install:*"
-    },
-    "dependencies": {
-        "@zebec-labs/zebec-protocol": "^1.1.2"
-    }
+  "name": "@zebec-protocol/all",
+  "version": "1.0.0",
+  "description": "Typescript SDKs for the Zebec Protocol",
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Zebec-protocol/zebec-sdk-v2.git"
+  },
+  "keywords": [
+    "zebec-protocol",
+    "money-streaming",
+    "token streaming",
+    "zebec"
+  ],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Zebec-protocol/zebec-sdk-v2/issues"
+  },
+  "homepage": "https://github.com/Zebec-protocol/zebec-sdk-v2/#readme",
+  "files": [],
+  "scripts": {
+    "build": "tsc -b ./packages/**/tsconfig.json",
+    "clean": "rm -R ./packages/**/dist",
+    "clean:win": "rmdir /s packages/**/dist",
+    "publish": "npm publish --access public",
+    "install:stream": "cd ../../../ && npm i -S @zebec-labs/stream",
+    "install": "run-p install:*"
+  },
+  "dependencies": {
+    "@zebec-labs/zebec-protocol": "^1.1.2"
+  },
+  "publishConfig": {
+      "access": "public"
+  },
+  "author": "Ashish | Zebec Protocol"
 }
