--- a/packages/stream/package.json
+++ b/packages/stream/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@zebec-protocol/stream",
-  "version": "1.0.2",
+  "version": "1.1.1",
   "description": "Zebec Protocol SDK V2",
-  "types": "src/index.d.ts",
+  "types": "./dist/types/index.d.ts",
   "keywords": [
     "zebec",
     "zebec protocol",
@@ -15,11 +15,10 @@
   "bugs": {
     "url": "https://github.com/Zebec-protocol/zebec-sdk-v2"
   },
-  "main": "dist/index.js",
+  "main": "./dist/esm/index.js",
   "files": [
-    "/dist/*.*",
-    "/src",
-    "/dist/**/*.*"
+    "/dist",
+    "/src"
   ],
   "scripts": {
     "build": "npm run clean; tsc",
@@ -37,6 +36,7 @@
   "dependencies": {
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.36.0",
+    "@zebec-protocol/stream": "^1.0.24",
     "borsh": "^0.7.0",
     "buffer": "^6.0.3"
   },
