--- a/packages/stream/package.json
+++ b/packages/stream/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@zebec-protocol/stream",
   "version": "1.1.1",
-  "description": "Zebec Protocol SDK V2",
+  "description": "Zebec Protocol SDK V2 - Treasury Management",
   "types": "./dist/types/index.d.ts",
   "keywords": [
     "zebec",
